# wikiart_metadata

./: .gitignore  LICENSE  README.md  art_image_scraping.ipynb  art_image_scraping_new.ipynb  artist_artworks_scraping.ipynb  artist_data_new.csv  artist_wikipedia_scraping.ipynb  artwork_scraping.ipynb  artwork_with_clip_features.csv  artworks_scraping_original.ipynb  artworks_scraping_original_remaining.ipynb  pyproject.toml  to_search.csv  to_search_completed.csv
artist_wikipedia/: 3d.html  a-y-jackson.html  aaron-douglas.html  aaron-shikler.html  aaron-siskind.html  abbas-kiarostami.html  abbott-handerson-thayer.html  abdul-mati-klarwein.html  abidin-dino.html  abraham-manievich.html  abraham-palatnik.html  abraham-van-strij.html  achille-beltrame.html  achille-pinelli.html  achille-zo.html  ad-reinhardt.html  adam-elsheimer.html  adam-van-noort.html  adja-yunkers.html  adnan-coker.html  adolf-dietrich.html  adolf-eberle.html  adolf-fleischmann.html  adolf-hiremy-hirschl.html  adolf-wolfli.html  adolph-de-meyer.html  adolph-gottlieb.html  adolph-menzel.html  adolphe-yvon.html  adriaen-brouwer.html  adriaen-van-de-venne.html  adriaen-van-ostade.html  adrian-ghenie.html  adrian-piper.html  adriana-varejao.html  adrien-dax.html  aelbert-cuyp.html  afewerk-tekle.html  afro.html  agim-sulaj.html  (+2757 more)
artist_wikipedia_content/: 3d.txt  a-y-jackson.txt  aaron-douglas.txt  aaron-shikler.txt  aaron-siskind.txt  abbas-kiarostami.txt  abbott-handerson-thayer.txt  abdul-mati-klarwein.txt  abidin-dino.txt  abraham-manievich.txt  abraham-palatnik.txt  abraham-van-strij.txt  afro.txt  (+2738 more)
(+23 files in other folders)
