[project]
name = "wikiart-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "notebook>=7.3.2",
    "pandas>=2.2.3",
    "pykernel>=0.1.6",
    "scikit-learn>=1.6.0",
    "selenium>=4.27.1",
    "tqdm>=4.67.1",
    "webdriver-manager>=4.0.2",
]
