[project]
name = "wikiart-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bwm-ng",
    "img2dataset>=1.45.0",
    "notebook>=7.3.2",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "pykernel>=0.1.6",
    "scikit-learn>=1.6.0",
    "selenium>=4.27.1",
    "tqdm>=4.67.1",
    "webdriver-manager>=4.0.2",
    "wikipedia>=1.4.0",
]
